Add pthread_sigmask stub

--- a/platform/vita/Makefile
+++ b/platform/vita/Makefile
@@ -46,6 +46,7 @@ THREAD_OBJS = \
   pte_callUserDestroyRoutines.o \
   pte_tkAssocDestroy.o \
   pthread_kill.o \
+  pthread_sigmask.o \
   pthread_attr_destroy.o \
   pthread_attr_getdetachstate.o \
   pthread_attr_getinheritsched.o \
